--- a/honey-rojo-detalle.html
+++ b/honey-rojo-detalle.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Honey Rojo - Hacherit</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,12 +30,12 @@
     </header>
 
     <section class="detalle-hero detalle-hero-rojo">
-        <div class="detalle-info">
+        <div class="detalle-info" data-aos="fade-right" data-aos-duration="1000">
             <h1>Honey Rojo</h1>
             <h1>Honey Rojo</h1>
             <h1>Honey Rojo</h1>
         </div>
-        <div class="detalle-specs">
+        <div class="detalle-specs" data-aos="fade-left" data-aos-delay="200">
             <div class="spec-item">
                 <div class="spec-icon"><img src="IMG/ALTURA.png" alt=""></div>
                 <div class="spec-text">
@@ -60,10 +61,10 @@
     </section>
 
     <section class="descripcion-section">
-        <div class="producto-imagen-grande">
+        <div class="producto-imagen-grande" data-aos="zoom-in" data-aos-duration="1000">
             <img src="IMG/honey rojo.png" alt="Honey Rojo">
         </div>
-        <div class="descripcion-content">
+        <div class="descripcion-content" data-aos="fade-left" data-aos-delay="200">
             <h2>DESCRIPCIÓN</h2>
             <p>Nacido entre la neblina y los cafetales de Santa Elena, el Honey Rojo guarda la dulzura de la tierra en
                 cada grano. Su proceso artesanal conserva la miel natural del fruto, creando un perfil envolvente que
@@ -86,18 +87,18 @@
     </div>
 
     <section class="proceso-section">
-        <h2 class="section-title">Proceso</h2>
+        <h2 class="section-title" data-aos="fade-down">Proceso</h2>
         <div class="proceso-grid">
-            <div class="proceso-item">
+            <div class="proceso-item" data-aos="fade-up" data-aos-delay="100">
                 <img src="IMG/proceso cafe 1.png" alt="Recolección">
                 <p>Solo se eligen los granos maduros, de color rojo intenso. Este punto es clave, pues la dulzura
                     natural del café depende de la madurez exacta del fruto.</p>
             </div>
-            <div class="proceso-item">
+            <div class="proceso-item" data-aos="fade-up" data-aos-delay="300">
                 <img src="IMG/proceso cafe 2.png" alt="Proceso Lavado">
                 <p>Se deja una buena cantidad de miel que se oxida y toma tonos rojizos durante la fermentación.</p>
             </div>
-            <div class="proceso-item">
+            <div class="proceso-item" data-aos="fade-up" data-aos-delay="500">
                 <img src="IMG/proceso cafe 3.png" alt="Reposo">
                 <p>El grano se seca conservando parte del mucílago, lo que aporta un perfil dulce, jugoso y con mayor
                     carácter frutal vinoso.</p>
@@ -128,6 +129,9 @@
             <p>© 2025 Copyright Hacherit. Todos los derechos reservados.</p>
         </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
 </body>
 
 </html>
