feat: Add WhatsApp purchase links, make footer logo clickable, and update social media links.

--- a/experiencias.html
+++ b/experiencias.html
@@ -127,13 +127,13 @@
     <footer>
         <div class="footer-content">
             <div class="footer-left">
-                <div class="footer-logo">
+                <a href="index.html"><div class="footer-logo">
                     <img src="IMG/LOGO NEGRO.png" alt="">
-                </div>
+                </div></a>
                 <div class="redes-sociales">
-                    <a href="#" class="red-social"><img src="IMG/TIKTOK_1.png" alt=""></a>
-                    <a href="" class="red-social"> <img src="IMG/INSTAGRAM.png" alt=""></a>
-                    <a href="" class="red-social"> <img src="IMG/FACEBOOK.png" alt=""></a>
+                    <a href="https://www.tiktok.com/@cafehacherit_?_r=1&_t=ZS-91leEk2lbP7" class="red-social"><img src="IMG/TIKTOK_1.png" alt=""></a>
+                    <a href="https://www.instagram.com/hacheritcafe?igsh=aWR0ejdhdnBxYXF1" class="red-social"> <img src="IMG/INSTAGRAM.png" alt=""></a>
+                    <a href="https://www.facebook.com/share/r/1ByqTHKqpN/" class="red-social"> <img src="IMG/FACEBOOK.png" alt=""></a>
                 </div>
             </div>
             <div class="footer-right">
