--- a/suave-lavado-detalle.html
+++ b/suave-lavado-detalle.html
@@ -83,7 +83,7 @@
     </section>
 
     <div class="cta-container">
-        <a href="#" class="detail-cta-button">Compra aquí</a>
+        <a href="https://wa.me/c/573122815813" class="detail-cta-button">Compra aquí</a>
     </div>
 
     <section class="proceso-section">
@@ -110,13 +110,13 @@
     <footer>
         <div class="footer-content">
             <div class="footer-left">
-                <div class="footer-logo">
+                <a href="index.html"><div class="footer-logo">
                     <img src="IMG/LOGO NEGRO.png" alt="">
-                </div>
+                </div></a>
                 <div class="redes-sociales">
-                    <a href="#" class="red-social"><img src="IMG/TIKTOK_1.png" alt=""></a>
-                    <a href="" class="red-social"> <img src="IMG/INSTAGRAM.png" alt=""></a>
-                    <a href="" class="red-social"> <img src="IMG/FACEBOOK.png" alt=""></a>
+                    <a href="https://www.tiktok.com/@cafehacherit_?_r=1&_t=ZS-91leEk2lbP7" class="red-social"><img src="IMG/TIKTOK_1.png" alt=""></a>
+                    <a href="https://www.instagram.com/hacheritcafe?igsh=aWR0ejdhdnBxYXF1" class="red-social"> <img src="IMG/INSTAGRAM.png" alt=""></a>
+                    <a href="https://www.facebook.com/share/r/1ByqTHKqpN/" class="red-social"> <img src="IMG/FACEBOOK.png" alt=""></a>
                 </div>
             </div>
             <div class="footer-right">
